test nav on mobile bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,9 +78,9 @@ ul{
   border: 5px solid gray;
   position: fixed;
 }
-#navbar-header{
+/*#navbar-header{
   width: 100%;
-}
+}*/
 #brand-icon{
   width: 40px;
   height: 40px;
@@ -376,7 +376,7 @@ ul{
 #nav-icon {
   right: 15px;
   width: 60px;
-  /*height: 45px;*/
+  height: 45px;
   position: absolute;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
